--- a/templates/admin/customer.html
+++ b/templates/admin/customer.html
@@ -35,7 +35,7 @@
                     <th scope="col">First Name</th>
                     <th scope="col">Last Name</th>
                     <th scope="col">Email</th>
-                    <th>Action</th>
+                    <!--<th>Action</th>-->
 
                 </tr>
             </thead>
@@ -58,7 +58,7 @@
                     <td>{{user.email}}</td>
                     </a>
 
-                    <td>
+                    <!--<td>
                         <a href="{% url 'adminManager:user_remove' user.id %}">
                             <button type="button" id="btn-confirm" class="btn btn-danger btn-sm px-3">
                                 <i class="fas fa-trash-alt"></i>
@@ -66,7 +66,7 @@
 
                         </a>
 
-                    </td>
+                    </td>-->
 
 
                 </tr>
