--- a/templates/admin/request_user.html
+++ b/templates/admin/request_user.html
@@ -22,8 +22,9 @@
 <div class="container">
     <h1 class="text-center text-primary">Total Customer Loan Request</h1>
     <div class="users my-5">
-
-
+       
+<h3 style="color: red">{{previousAmount}}</h3>
+<h3 style="color: red">{{previousPayable}}</h3>
 
         <table class="table table-light table-hover table-bordered table-striped text-center">
             <thead class="bg-dark ">
