--- a/templates/admin/transaction.html
+++ b/templates/admin/transaction.html
@@ -47,8 +47,7 @@
                     <td>{{loan.customer.id}}</td>
                     <td>{{loan.customer}}</td>
 
-
-                    <td>{{loan.payment}} Tk</td>
+                    <td>₦{{loan.payment}} </td>
                     <td>{{loan.transaction}}</td>
                     <td>{{loan.payment_date}}</td>
                     <td>{{loan.customer.user.email}}</td>
