--- a/templates/loanapp/user_transaction.html
+++ b/templates/loanapp/user_transaction.html
@@ -62,7 +62,7 @@
                     <td>{{loan.payment_date}}</td>
                     <td>{{loan.transaction_id}}</td>
                     <td>#{{loan.payment}}</td>
-                  
+                   <td>{{loan.interestRate}}</td>
 
                    
                 <!---{% for cust in loan.customer.loan_user.all %}
