--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -71,7 +71,7 @@
                         <a class="nav-link" href="{% url 'loanApp:loan_request'%}">Apply For A Loan</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="{% url 'account:edit-customer'%}">Update Info</a>
+                        <a class="nav-link" href="{% url 'account:edit-customer_info' %}">Update Info</a>
                     </li>
 
                     <li>
@@ -100,12 +100,6 @@
 
             <!-- Right elements -->
             <div class="d-flex align-items-center">
-
-
-
-
-
-
 
             </div>
             <!-- Right elements -->
