--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,17 @@
     {% block css_block %}
 
     {% endblock %}
+
+
+    <style>
+        #messages{
+    text-align: left;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 300;
+    color: rgb(40, 175, 40);
+}
+    </style>
 </head>
 
 <body>
