--- a/templates/home.html
+++ b/templates/home.html
@@ -18,6 +18,10 @@
 
 <div class="container">
     <h3>welcome {{ user }}!</h3>
+
+    {% for message in messages %}
+    <p id="messages">{{ message }}</p>
+ {% endfor %}
     <div class="row">
         <div class="col-md-6 m-auto">
             <img src="{% static 'images/loan.jpg' %}" class="img-fluid mx-auto" alt="Background Image" srcset="">
@@ -34,6 +38,12 @@
 
                     <button type="button" class="btn btn-info btn-rounded ms-2">Register</button>
                 </a>
+                <h3>{% for i in abb %}</h3>
+                <h3 style="color: green">{{ i.mydate}}</h3>
+                
+                <h3>{{i.get_date}}</h3>
+                {% endfor %}
+             
 
             </div>
             <!--<a href="">
