--- a/templates/loanapp/user_dashboard.html
+++ b/templates/loanapp/user_dashboard.html
@@ -95,9 +95,9 @@
                     <h3>Payable Loan</h3>
 
                     {% if totalPayable %}
-                    <h1><span id="digit">৳{{ totalPayable|sub:0 }}</span></h1>
+                    <h1><span id="digit">₦{{ totalPayable|sub:0 }}</span></h1>
                     {% else %}
-                    <h1><span id="digit">৳0</span></h1>
+                    <h1><span id="digit">0</span></h1>
                     {% endif %}
                 </div>
 
@@ -107,9 +107,9 @@
                     <h3>Approved Loan</h3>
 
                     {% if totalLoan %}
-                    <h1><span id="digit">৳{{totalLoan|sub:0}}</span></h1>
+                    <h1><span id="digit">₦{{totalLoan|sub:0}}</span></h1>
                     {% else %}
-                    <h1><span id="digit">৳0</span></h1>
+                    <h1><span id="digit">0</span></h1>
                     {% endif %}
                 </div>
 
@@ -119,23 +119,30 @@
                     <h3>Total Paid Loan</h3>
 
                     {% if totalPaid %}
-                    <h1><span id="digit">৳{{totalPaid|sub:0}}</span></h1>
+                    <h1><span id="digit">₦{{totalPaid|sub:0}}</span></h1>
+                   
                     {% else %}
-                    <h1><span id="digit">৳0</span></h1>
+                    <h1><span id="digit">0</span></h1>
                     {% endif %}
                 </div>
 
             </div>
 
             
+            <!--
+                 { elif outstanding }
+                    <h1><span id="digit">0</span></h1>
+            -->
+
+
             <div class="col-md-4 ">
                 <div class="status" style="background-color:#42A5F5">
                     <h3>Total Due Loan</h3>
 
                     {% if totalPayable or totalPaid %}
-                    <h1><span id="digit">৳{{ totalPayable|sub:totalPaid }}</span></h1>
+                    <h1><span id="digit">{{ totalPayable|sub:totalPaid }}</span></h1>
                     {% else %}
-                    <h1><span id="digit">৳0</span></h1>
+                    <h1><span id="digit">0</span></h1>
                     {% endif %}
                 </div>
 
