--- a/templates/errorForm.html
+++ b/templates/errorForm.html
@@ -35,8 +35,8 @@ student lesson
                 
         <div class="mb-4 form-outline">
 
-            {% render_field form1.city %}
-            <label class="form-label">city</label>
+            {% render_field form1.location %}
+            <label class="form-label">Location</label>
         </div>
                 
         <div class="mb-4 form-outline">
@@ -68,7 +68,7 @@ student lesson
         </div>
         <div class="mb-4 form-outline">
 
-            {% render_field form1.location %}
+            {% render_field form1.state %}
            
         </div>
         <div class="mb-4 form-outline">
