--- a/templates/loanapp/customerBank.html
+++ b/templates/loanapp/customerBank.html
@@ -58,7 +58,7 @@
                     <label class="form-label">Account Number</label>
                 </div>
                   
-                <div class="mb-4 form-outline">
+                <!--<div class="mb-4 form-outline">
 
                     {% render_field form.nin|attr:'required:false'  class="form-control" %}
                     <label class="form-label">NIN</label>
@@ -70,9 +70,9 @@
                 </div>
                 <div class="mb-4 form-outline">
 
-                    {% render_field form.card_no|attr:'required:true' class="form-control" %}
+                    {% render_field form.card_no|attr:'required:false' class="form-control" %}
                     <label class="form-label">Card Number</label>
-                </div>
+                </div>-->
                 <div class="mb-4 form-outline">
 
                     {% render_field form.next_of_kin|attr:'required:true' class="form-control" %}
