--- a/templates/loginApp/detail.html
+++ b/templates/loginApp/detail.html
@@ -21,7 +21,7 @@ User Sign Up
 <div class="container">
 
     <h1 style="color:green">address:{{addr}}</h1>
-    <h1 style="color:green">city:{{city}}</h1>
+    <h1 style="color:green">Location:{{location}}</h1>
     <h1 style="color:green">state:{{state}}</h1>
     <h3 style="color:red;">biz{{ bix }}</h3>
     <h1 style="color:green">bus st:{{stp}}</h1>
@@ -65,8 +65,8 @@ User Sign Up
                   
                 <div class="mb-4 form-outline">
 
-                    {% render_field form.city|attr:'required:true' class="form-control" %}
-                    <label class="form-label">City</label>
+                    {% render_field form.location|attr:'required:true' class="form-control" %}
+                    <label class="form-label">Location</label>
                 </div>
                 <div class="mb-4 form-outline">
 
