--- a/templates/loginApp/update/edit.html
+++ b/templates/loginApp/update/edit.html
@@ -72,12 +72,12 @@
                   
                 <div class="mb-4 form-outline">
 
-                    {% render_field form2.city|attr:'required:true' class="form-control" %}
+                    {% render_field form2.location|attr:'required:true' class="form-control" %}
                     <label class="form-label">Location</label>
                 </div>
                 <div class="mb-4 form-outline">
 
-                    {% render_field form2.location|attr:'required:true' class="form-control" %}
+                    {% render_field form2.state|attr:'required:true' class="form-control" %}
                     <label class="form-label">State</label>
                 </div>
              
