--- a/templates/admin/customer.html
+++ b/templates/admin/customer.html
@@ -19,6 +19,8 @@
 
 {% block body_block %}
 
+
+
 <div class="container">
     <h1 class="text-center text-primary">Total Customer Loan Management Application</h1>
     <div class="users my-5">
@@ -46,17 +48,18 @@
                   
                     <th scope="row">{{forloop.counter}}</th>
                     <td>{{user.id}}</td>
-                    <a href="">
-                    <td>{{user}}</td>
-                    </a>
+                  
+                    <td><a href="{% url 'adminManager:user_details' user.pk %}">{{user}}</a></td>
+              
 
                     <td> <img src="{{ user.customer_info.profile_img.url }}" alt="Profile Pic" height="40px" width="40px" />
                     </td>
+                
 
                     <td>{{user.first_name}}</td>
                     <td>{{user.last_name}}</td>
                     <td>{{user.email}}</td>
-                    </a>
+                
 
                     <!--<td>
                         <a href="{% url 'adminManager:user_remove' user.id %}">
