--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -38,7 +38,9 @@
                 <a class="mt-2 navbar-brand mt-lg-0" href="/">
                     <img src="https://mdbootstrap.com/img/logo/mdb-transaprent-noshadows.png" height="15" alt=""
                         loading="lazy" />
+                        APC 
                 </a>
+
                 <!-- Left links -->
                 <ul class="mb-2 navbar-nav me-auto mb-lg-0">
                     <li class="nav-item">
@@ -71,7 +73,7 @@
                         <a class="nav-link" href="{% url 'loanApp:loan_request'%}">Apply For A Loan</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="{% url 'account:edit-customer_info' %}">Update Info</a>
+                        <a class="nav-link" href="{% url 'account:edit-customer'%}">Update Info</a>
                     </li>
 
                     <li>
@@ -100,6 +102,12 @@
 
             <!-- Right elements -->
             <div class="d-flex align-items-center">
+
+
+
+
+
+
 
             </div>
             <!-- Right elements -->
