--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -53,6 +53,15 @@
     <div class="mb-5 text-center alert alert-primary" role="alert">
         <h1>Admin Dashboard</h1>
     </div>
+
+    <div class="col-md-4">
+        <div class="withdraw status">
+          
+        <h1> <a href="{% url 'adminManager:locations' %}" class="btn btn-danger">locations</a> </h1>
+        </div>
+
+    </div>
+
     <div id="second-part">
         <div class="row">
             <div class="col-md-4 ">
