--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -86,6 +86,7 @@
                     </h1>
                 </div>
 
+
             </div>
             <div class="col-md-4 ">
                 <div class="status" style="background-color:#95CEFF">
@@ -99,9 +100,9 @@
                     <h3>Total Payable Loan</h3>
 
                     {% if totalPayable %}
-                    <h1><span id="digit">৳{{ totalPayable|sub:0 }}</span></h1>
+                    <h1><span id="digit">₦{{ totalPayable|sub:0 }}</span></h1>
                     {% else %}
-                    <h1><span id="digit">৳0</span></h1>
+                    <h1><span id="digit">₦0</span></h1>
                     {% endif %}
                 </div>
 
@@ -111,9 +112,9 @@
                     <h3>Total Approved Loan</h3>
 
                     {% if totalLoan %}
-                    <h1><span id="digit">৳{{totalLoan|sub:0}}</span></h1>
+                    <h1><span id="digit">₦{{totalLoan|sub:0}}</span></h1>
                     {% else %}
-                    <h1><span id="digit">৳0</span></h1>
+                    <h1><span id="digit">₦0</span></h1>
                     {% endif %}
                 </div>
 
@@ -122,9 +123,9 @@
                 <div class="status" style="background-color:#EF5350">
                     <h3>Total Paid Loan</h3>
                     {% if totalPaid %}
-                    <h1><span id="digit">৳{{totalPaid|sub:0}}</span></h1>
+                    <h1><span id="digit">₦{{totalPaid|sub:0}}</span></h1>
                     {% else %}
-                    <h1><span id="digit">৳0</span></h1>
+                    <h1><span id="digit">₦0</span></h1>
                     {% endif %}
                 </div>
 
@@ -135,11 +136,11 @@
                     <h3>Total Due Loan</h3>
 
                     {% if totalPayable and totalPaid %}
-                    <h1><span id="digit">৳{{ totalPayable|sub:totalPaid }}</span></h1>
+                    <h1><span id="digit">₦{{ totalPayable|sub:totalPaid }}</span></h1>
                     {% elif totalPayable %}
-                    <h1><span id="digit">৳{{ totalPayable|sub:0 }}</span></h1>
+                    <h1><span id="digit">₦{{ totalPayable|sub:0 }}</span></h1>
                     {% else %}
-                    <h1><span id="digit">৳0</span></h1>
+                    <h1><span id="digit">₦0</span></h1>
                     {% endif %}
                 </div>
 
