--- a/templates/new/general/index.html
+++ b/templates/new/general/index.html
@@ -157,11 +157,12 @@ https://templatemo.com/tm-545-finance-business
           <!-- Item -->
           <div class="item item-1">
             <div class="img-fill">
-                <div class="text-content">
+                <div class="text-content" >
                   <h6>we are ready to help you</h6>
-                  <h4>Financial Analysis<br>&amp; Consulting</h4>
+                  <h4>Financial Analysis<br>&amp; Consultancy</h4>
                   <p>We are here to help you finance your immediate projects like boosting your business,hospital bills,paying rent, buying a car,
                     paying school fees, etc.</p>
+                    <p>Join the many business owners and workers  we’ve helped turn great ideas into thriving businesses</p>
                   <a href="contact.html" class="filled-button">contact us</a>
                   <h3>{% for i in abb %}</h3>
                   <h3 style="color: green">{{ i.mydate}}</h3>
@@ -175,11 +176,19 @@ https://templatemo.com/tm-545-finance-business
           <!-- Item -->
           <div class="item item-2">
             <div class="img-fill">
-                <div class="text-content">
+                <div class="text-content" style="margin-top: 80px">
                   <h6>we are here to support you</h6>
-                  <h4>Accounting<br>&amp; Management</h4>
-                  <p>Save with us today and thank us tomorrow.</p>
+            
+                  <p>Your business is succeeding and you’re ready to take the next step. Verity is here to help you grow your business by providing a suite of loan products to fit all your needs. With local Seattle Business experience and understanding, as well as local loan decisions, Verity provides the trusted, professional, and personal service you deserve from your financial institution</p>
                   <p>Get a loan and invest into your business.We one call away from getting that loan .Contact us today for your financial freedom !</p>
+                  <p>Manage the ups and downs of your business needs with a line of credit</p>
+                  <ul>
+                    <li>Low variable interest rates</li>
+                    <li>Funds available for practically any purpose</li>
+                    <li>Avoid excess interest payments</li>
+                    <li>Borrow up to your business’ credit limit </li>
+                    <li>Earn rewards each time you spend  </li>
+                  </ul>
                   <a href="services.html" class="filled-button">our services</a>
                 </div>
             </div>
@@ -188,11 +197,14 @@ https://templatemo.com/tm-545-finance-business
           <!-- Item -->
           <div class="item item-3">
             <div class="img-fill">
-                <div class="text-content">
-                  <h6>we have a solid background</h6>
+                <div class="text-content" style="margin-top: 40px">
+                  <h6>Cash Management Services</h6>
                   <h4>Market Analysis<br>&amp; Statistics</h4>
-                  
-                  <p>We Help you actualize your dreams by making finance available.</p>
+              
+                  <p>Simsudresources  offers a full range of cash management services to meet your unique business needs.
+                  Our solutions are designed to help optimize your cash flow position and contribute to the effective management of your business's day-to-day operations</p>
+                  <p>Simsudresources Helps you actualize your dreams by making finance available & by
+                   helping you execute a wide range of cash management transactions, all designed to help you manage your cash flow more efficiently</p>
                   <!--<a href="about.html" class="filled-button">learn more</a>-->
                 </div>
             </div>
@@ -207,7 +219,7 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-8">
             <h4>Request a call back right now ?</h4>
-            <span>Mauris ut dapibus velit cras interdum nisl ac urna tempor mollis.</span>
+            <span>We are one call away from getting the funds you desire.</span>
           </div>
           <div class="col-md-4">
             <a href="contact.html" class="border-button">Contact Us</a>
@@ -230,8 +242,10 @@ https://templatemo.com/tm-545-finance-business
               <img src="assets/images/service_01.jpg" alt="">
               <div class="down-content">
                 <h4>Digital Currency</h4>
-                <p>Sed tincidunt dictum lobortis. Aenean tempus diam vel augue luctus dignissim. Nunc ornare leo tortor.</p>
-                <a href="" class="filled-button">Read More</a>
+                <p>Providing you with the tools you need to optimize your cash flow.We offers a full range of cash management services to meet your unique business needs.</p>
+              
+       
+                <a href="" class="filled-button">contact us today to know more</a>
               </div>
             </div>
           </div>
@@ -240,7 +254,7 @@ https://templatemo.com/tm-545-finance-business
               <img src="assets/images/service_02.jpg" alt="">
               <div class="down-content">
                 <h4>Market Analysis</h4>
-                <p>Sed tincidunt dictum lobortis. Aenean tempus diam vel augue luctus dignissim. Nunc ornare leo tortor.</p>
+                <p>We do not only lend you money to meet your immediate nneds, we also help to analyze and advise you on the best business descions you shoukd take to grow your business.</p>
                 <a href="" class="filled-button">Read More</a>
               </div>
             </div>
@@ -250,8 +264,9 @@ https://templatemo.com/tm-545-finance-business
               <img src="assets/images/service_03.jpg" alt="">
               <div class="down-content">
                 <h4>Historical Data</h4>
-                <p>Sed tincidunt dictum lobortis. Aenean tempus diam vel augue luctus dignissim. Nunc ornare leo tortor.</p>
-                <a href="" class="filled-button">Read More</a>
+                <p> Our solutions are designed to help optimize your cash flow position and contribute to the effective management of your business's day-to-day operation
+                </p>
+                <a href="" class="filled-button">Contact Us</a>
               </div>
             </div>
           </div>
@@ -264,10 +279,12 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-6">
             <div class="left-content">
-              <span>Lorem ipsum dolor sit amet</span>
+              <!--<span>Lorem ipsum dolor sit amet</span>-->
               <h2>Our solutions for your <em>business growth</em></h2>
-              <p>Pellentesque ultrices at turpis in vestibulum. Aenean pretium elit nec congue elementum. Nulla luctus laoreet porta. Maecenas at nisi tempus, porta metus vitae, faucibus augue. 
-              <br><br>Fusce et venenatis ex. Quisque varius, velit quis dictum sagittis, odio velit molestie nunc, ut posuere ante tortor ut neque.</p>
+              <p>We have a very high approval rate for people who apply for loan. We make it possible because we want your business to grow.</p>
+              <p>We have alternate lending solutions for people looking for loans other than banks. We can provide loans that are not provided by bank</p>
+              <p>Wait for the processing after you submit your loan application and wait to be contacted by one of our loan representatives</p>
+            
               <a href="" class="filled-button">Read More</a>
             </div>
           </div>
@@ -275,26 +292,26 @@ https://templatemo.com/tm-545-finance-business
             <div class="row">
               <div class="col-md-6">
                 <div class="count-area-content">
-                  <div class="count-digit">945</div>
+                  <div class="count-digit">24</div>
                   <div class="count-title">Work Hours</div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="count-area-content">
-                  <div class="count-digit">1280</div>
+                  <div class="count-digit">225</div>
                   <div class="count-title">Great Reviews</div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="count-area-content">
-                  <div class="count-digit">578</div>
-                  <div class="count-title">Projects Done</div>
+                  <div class="count-digit">228</div>
+                  <div class="count-title">Succesful Applications.</div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="count-area-content">
-                  <div class="count-digit">26</div>
-                  <div class="count-title">Awards Won</div>
+                  <div class="count-digit">30</div>
+                  <div class="count-title">Requests everyday</div>
                 </div>
               </div>
             </div>
@@ -311,15 +328,17 @@ https://templatemo.com/tm-545-finance-business
               <div class="row">
                 <div class="col-md-6">
                   <div class="left-image">
-                    <img src="{% static 'assets/images/more-info.jpg' %}" alt="">
+                    <img src="/static/images/bankslide1.jpg" alt="">
                   </div>
                 </div>
                 <div class="col-md-6 align-self-center">
                   <div class="right-content">
                     <span>Who we are</span>
                     <h2>Get to know about <em>our company</em></h2>
-                    <p>Curabitur pulvinar sem a leo tempus facilisis. Sed non sagittis neque. Nulla conse quat tellus nibh, id molestie felis sagittis ut. Nam ullamcorper tempus ipsum in cursus<br><br>Praes end at dictum metus. Morbi id hendrerit lectus, nec dapibus ex. Etiam ipsum quam, luctus eu egestas eget, tincidunt</p>
-                    <a href="#" class="filled-button">Read More</a>
+                    <p> We are your friend who want the growth of your business and are ready to support you to any length.All you need is to reach out to us and we get it done.</p>
+                    <p>We are a purpose-driven team, committed to results in an inclusive and high-performance cultur</p>
+                    <p>With us, you can bank on us that your need is met.Enjoy today while saving for tomorrow. We’ll help you stay on track so you can enjoy the moment.</p>
+                        <!--<a href="#" class="filled-button">Read More</a>-->
                   </div>
                 </div>
               </div>
@@ -329,7 +348,7 @@ https://templatemo.com/tm-545-finance-business
       </div>
     </div>
 
-    <div class="testimonials">
+    <!--<div class="testimonials">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -381,7 +400,7 @@ https://templatemo.com/tm-545-finance-business
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
 
     <div class="callback-form">
       <div class="container">
@@ -389,7 +408,7 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-12">
             <div class="section-heading">
               <h2>Request a <em>call back</em></h2>
-              <span>Etiam suscipit ante a odio consequat</span>
+              <span></span>
             </div>
           </div>
           <div class="col-md-12">
@@ -431,7 +450,7 @@ https://templatemo.com/tm-545-finance-business
 
     <div class="partners">
       <div class="container">
-        <div class="row">
+        <!--<div class="row">
           <div class="col-md-12">
             <div class="owl-partners owl-carousel">
             
@@ -457,7 +476,7 @@ https://templatemo.com/tm-545-finance-business
               
             </div>
           </div>
-        </div>
+        </div>-->
       </div>
     </div>
 
@@ -468,7 +487,9 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-3 footer-item">
             <h4>Finance Business</h4>
-            <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.</p>
+            <p>Our values: Respect, Integrity, Accountability and Passion.
+            </p>
+          <p>By putting our customers first, we’re helping them be better off today and tomorrow.A purpose-driven team, committed to results in an inclusive and high-performance culture.</p>
             <ul class="social-icons">
               <li><a rel="nofollow" href="https://fb.com/templatemo" target="_blank"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -479,21 +500,21 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-3 footer-item">
             <h4>Useful Links</h4>
             <ul class="menu-list">
-              <li><a href="#">Vivamus ut tellus mi</a></li>
-              <li><a href="#">Nulla nec cursus elit</a></li>
-              <li><a href="#">Vulputate sed nec</a></li>
-              <li><a href="#">Cursus augue hasellus</a></li>
-              <li><a href="#">Lacinia ac sapien</a></li>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Our Services</a></li>
+              <li><a href="#">Contact Us</a></li>
+            
             </ul>
           </div>
           <div class="col-md-3 footer-item">
             <h4>Additional Pages</h4>
             <ul class="menu-list">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">How We Work</a></li>
-              <li><a href="#">Quick Support</a></li>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Login</a></li>
+              <li><a href="#">Signup</a></li>
               <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Privacy Policy</a></li>
+              <!--<li><a href="#">Privacy Policy</a></li>-->
             </ul>
           </div>
           <div class="col-md-3 footer-item last-item">
@@ -533,9 +554,9 @@ https://templatemo.com/tm-545-finance-business
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <p>Copyright &copy; 2020 Financial Business Co., Ltd.
+            <p>Copyright &copy; 2022 
             
-            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">realmindt@gmail.com</a></p>
           </div>
         </div>
       </div>
